--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -10,7 +10,7 @@
                     src="../../assets/images/closeup-business-woman-hand-typing-laptop-keyboard-with-m.jpg" />
          </div> -->
             <div>
-                <!-- <mat-icon>directions_alt</mat-icon> -->
+                <mat-icon>check_circle_outline</mat-icon>
                 <b>Enquiries and Admissions Management</b><br>
                 With the help of the Education Management System, the most commonly asked questions and enquiries
                 regarding
@@ -24,7 +24,7 @@
                     src="../../assets/images/businesspeople-meeting-plan-analysis-graph-company-finance-strat.jpg" />
             </div> -->
             <div>
-             <!-- <mat-icon>assignment_return</mat-icon> -->
+                <mat-icon>check_circle_outline</mat-icon>
                 <b>Management of Fee Collections</b><br>
                 Fee collection can be made easy with the help of the Educational Management System, as it
                 calculates and displays fee amount, due and payment details.
@@ -32,7 +32,7 @@
         </div>
         <div style="margin-bottom: 30px;">
             <div>
-                
+                <mat-icon>check_circle_outline</mat-icon>
                 <b>Examination Management</b><br>
                 An Education Management System can be useful for planning, scheduling, and informing important
                 information about exams by using scheduling. It can also be used to publish exam
@@ -45,12 +45,14 @@
         </div>
 
         <p style="margin-bottom: 30px;">
+            <mat-icon>check_circle_outline</mat-icon>
             <b>Student Information Management</b><br>
             This feature helps teachers and parents to access essential information on students' academic activities
             quickly and easily. This may include fee attendance records, exam results, payment history, and general
             academic progress.
         </p>
         <p style="margin-bottom: 30px;">
+            <mat-icon>check_circle_outline</mat-icon>
             <b>Attendance Management</b><br>
             Attendance tracking and its management is made entirely easier. Teachers and school administrators do
             not
@@ -58,23 +60,27 @@
             simply evaluate automatically generated reports and check where there are issues.
         </p>
         <p style="margin-bottom: 30px;">
+            <mat-icon>check_circle_outline</mat-icon>
             <b>Lesson Plans & Assignments</b><br>
             An Education Management System makes it easy for teachers to share assignments and lesson plans with
             students and their parents in advance. These can be downloaded or printed if required.
         </p>
         <p style="margin-bottom: 30px;">
+            <mat-icon>check_circle_outline</mat-icon>
             <b>Automatic Certificate Generation</b><br>
             Using Education Management System, Students' education related certificate and other sports activities
             can
             be generated and print easily.
         </p>
         <p style="margin-bottom: 30px;">
+            <mat-icon>check_circle_outline</mat-icon>
             <b>Timetable management </b><br> This function allows you to quickly organize and sort out the subjects
             and time
             allocated to each of them according to the class and teacher. A hurriedly made timetable will only bring
             confusion and more hurdles in running your educational institute smoothly.
         </p>
         <p>
+            <mat-icon>check_circle_outline</mat-icon>
             <b>Evaluation and Assessment</b>
             This module enables to conduct online test and exams. Evaluation or assessment of the students can be
             conducted
