first time to testing site

--- a/src/app/modules/Accounting/accountnature/accountnature.component.html
+++ b/src/app/modules/Accounting/accountnature/accountnature.component.html
@@ -132,14 +132,14 @@
             </button>
         </mat-header-cell>
         <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
-            <button style="margin-right:15px" [disabled]="loading || Permission=='read' || !element.Action" matTooltip="save" mat-raised-button
+            <button style="margin-right:15px" [disabled]="loading || element.ParentId==0 || Permission=='read' || !element.Action" matTooltip="save" mat-raised-button
                 color="accent" (click)="UpdateOrSave(element)">
                 <mat-icon>save</mat-icon>
                 <mat-icon *ngIf="loading">
                     <mat-spinner diameter="20" color="Blue"></mat-spinner>
                 </mat-icon>
             </button>
-            <button [disabled]="loading || Permission!='rwd' || !element.Action" matTooltip="save" mat-raised-button
+            <button [disabled]="loading || element.ParentId==0 || Permission!='rwd' || !element.Action" matTooltip="save" mat-raised-button
                 color="accent" (click)="openDialog(element)">
                 <mat-icon>delete</mat-icon>
                 <mat-icon *ngIf="loading">
@@ -151,4 +151,4 @@
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
     <mat-row *matRowDef="let row; columns: displayedColumns;" style="align-items: baseline;"></mat-row>
 </mat-table>
-<mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[5,10,20,50]"></mat-paginator>
+<mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[6,10,20,50]"></mat-paginator>
