--- a/src/app/modules/Accounting/accountnature/accountnature.component.scss
+++ b/src/app/modules/Accounting/accountnature/accountnature.component.scss
@@ -9,7 +9,7 @@ mat-form-field{
     justify-content:center;
     flex:1 0 100px;
 }
-.mat-column-AccountName
+.mat-column-AccountName,.mat-column-ParentId
 {    
     flex:1 0 150px;
 }
