filterorg bug fixed

--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -59,12 +59,12 @@
             need to track attendance manually but
             simply evaluate automatically generated reports and check where there are issues.
         </p>
-        <p style="margin-bottom: 30px;">
+        <!-- <p style="margin-bottom: 30px;">
             <mat-icon>check_circle_outline</mat-icon>
             <b>Lesson Plans & Assignments</b><br>
             An Education Management System makes it easy for teachers to share assignments and lesson plans with
             students and their parents in advance. These can be downloaded or printed if required.
-        </p>
+        </p> -->
         <p style="margin-bottom: 30px;">
             <mat-icon>check_circle_outline</mat-icon>
             <b>Automatic Certificate Generation</b><br>
