--- a/src/app/modules/classes/classdetail/classdetail.component.html
+++ b/src/app/modules/classes/classdetail/classdetail.component.html
@@ -156,7 +156,7 @@
             </button>
         </mat-header-cell>
         <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
-            <button [disabled]="loading || !element.Action" matTooltip="save" mat-raised-button color="accent"
+            <button [disabled]="loading || Permission=='read' || !element.Action" matTooltip="save" mat-raised-button color="accent"
                 (click)="UpdateOrSave(element)">
                 <mat-icon>save</mat-icon>
                 <mat-icon *ngIf="loading">
