--- a/src/app/modules/dashboard/homedashboard/homedashboard.component.html
+++ b/src/app/modules/dashboard/homedashboard/homedashboard.component.html
@@ -12,18 +12,18 @@
                     <mat-option *ngFor="let item of PermittedApplications" [value]="item.applicationId">
                         {{item.applicationName}}</mat-option>
                 </mat-select>
+            </mat-form-field>          
+            <mat-form-field [style.width.px]="130" appearance="outline">
+                <mat-label>Company</mat-label>
+                <mat-select formControlName="searchSubOrgId" (selectionChange)="SubOrgChange()">
+                    <mat-option *ngFor="let item of SubOrganization" 
+                        [value]="item">{{item.MasterDataName}}</mat-option>
+                </mat-select>
             </mat-form-field>
             <mat-form-field [style.width.px]="130" appearance="outline">
                 <mat-label>Batch</mat-label>
                 <mat-select formControlName="searchBatchId" (selectionChange)="changebatch()">
                     <mat-option *ngFor="let item of Batches" [value]="item.BatchId">{{item.BatchName}}</mat-option>
-                </mat-select>
-            </mat-form-field>
-            <mat-form-field [style.width.px]="130" appearance="outline">
-                <mat-label>Company</mat-label>
-                <mat-select formControlName="searchSubOrgId">
-                    <mat-option *ngFor="let item of SubOrganization"
-                        [value]="item.MasterDataId">{{item.MasterDataName}}</mat-option>
                 </mat-select>
             </mat-form-field>
             <button [disabled]="loading || !ValueChanged" mat-raised-button color="accent" (click)="submit()">
