--- a/src/app/modules/student/studentfeepayment/feereceipt/feereceipt.component.html
+++ b/src/app/modules/student/studentfeepayment/feereceipt/feereceipt.component.html
@@ -133,9 +133,9 @@
                         <div>Payment Type:</div>
                         <div style="margin-left:15px">{{PaymentType}}</div>
                     </div>
-                    <!-- <div style="display: flex;justify-content: flex-end; padding: 15px;margin-right:30px;">
-                        <div>Accountant</div>
-                    </div> -->
+                    <div style="display: flex;justify-content: flex-end; padding: 15px;margin-right:30px;">
+                       <div style="padding-right: 15px;">Received by:</div><div style="font-weight:bold;"> {{ReceivedBy}}</div>
+                    </div>
                 </div>
                 <div style="margin:15px;justify-content: center;width: 100%;display: flex;">
                     <div style="font-size:smaller;font-style: italic;">This is a computer-generated document. No
