--- a/src/app/modules/student/studentfeepayment/feereceipt/feereceipt.component.scss
+++ b/src/app/modules/student/studentfeepayment/feereceipt/feereceipt.component.scss
@@ -45,12 +45,12 @@ mat-footer-row {
     flex           : 1 1 80px;
 }
 
-.mat-column-ReceiptNo {
-    flex: 1 1 100px;
+.mat-column-ReceiptNo,.mat-column-PaymentType {
+    flex: 1 1 130px;
 }
 
 .mat-column-FeeName {
-    flex: 1 1 250px;
+    flex: 1 0 250px;
 }
 
 .mat-column-PaymentAmount,
@@ -66,13 +66,13 @@ mat-footer-row {
 .mat-column-Action {
     display        : flex;
     justify-content: center;
-    flex           : 1 1 150px;
+    flex           : 1 1 160px;
 }
 
 .divCls:nth-child(9) {
     //font-family: Arial, Helvetica, sans-serif; 
     margin: 15px;   
-    font-family: 'VT323', monospace,Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size:large;
     padding    : 15px 15px 10px 15px;
 }
