--- a/src/app/modules/control/add-master-data/add-master-data.component.html
+++ b/src/app/modules/control/add-master-data/add-master-data.component.html
@@ -156,6 +156,7 @@
                 || !element.Action 
                 || Permission=='read'
                 || (element.MasterDataId>0 && (Parent=='Period Type'
+                                       || Parent=='Table Names' 
                                        || Parent=='Roll No Generation' 
                                        || Parent=='User Type'
                                        || Parent=='Exam Status'
@@ -184,6 +185,7 @@
                 || !element.Action 
                 || Permission=='read'
                 || (element.MasterDataId>0 && (Parent=='Certificate Type'
+                                       || Parent=='Table Names'
                                        || Parent=='Period Type'
                                        || Parent=='Roll No Generation' 
                                        || Parent=='User Type'
