--- a/src/app/modules/frontoffice/no-of-student/no-of-student.component.scss
+++ b/src/app/modules/frontoffice/no-of-student/no-of-student.component.scss
@@ -5,3 +5,13 @@ mat-cell,mat-header-cell{
     justify-content: center;
     border-right: 1px solid lightgray;
 }
+mat-header-row,mat-row{
+    min-height: 34px;
+}
+.mat-row:nth-child(even){
+    background-color: lightgoldenrodyellow;
+}
+        
+.mat-row:nth-child(odd){
+    background-color: white;
+}
