--- a/src/app/modules/student/studentfeepayment/addstudentfeepayment/addstudentfeepayment.component.html
+++ b/src/app/modules/student/studentfeepayment/addstudentfeepayment/addstudentfeepayment.component.html
@@ -191,7 +191,7 @@
                             </span>
                             <span>
                                 <form [formGroup]="paymentform">
-                                    <span *ngIf="PaymentName =='adjusted to salary'">
+                                    <span *ngIf="PaymentName =='adjusted to account'">
                                         <mat-form-field appearance="outline" [style.width.px]="350"
                                             style="margin-right: 15px;">
                                             <mat-label>employee</mat-label>
