--- a/src/app/modules/control/customfeaturerolepermission/customfeaturerolepermission.component.html
+++ b/src/app/modules/control/customfeaturerolepermission/customfeaturerolepermission.component.html
@@ -13,6 +13,15 @@
                 </mat-option>
             </mat-select>
         </mat-form-field>
+        <mat-form-field appearance="outline" [style.width.px]="200">
+            <mat-label>Feature Type</mat-label>
+                <mat-select formControlName="searchTableName" (selectionChange)="enable($event)">
+                <mat-option value="0">select</mat-option>
+                <mat-option *ngFor="let item of TableNames" [value]="item.MasterDataId">
+                    {{item.MasterDataName}}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
         <mat-form-field appearance="outline">
             <mat-label>feature</mat-label>
             <input type="text" matInput formControlName="searchFeatureName" [matAutocomplete]="autoF">
@@ -22,16 +31,7 @@
                 </mat-option>
             </mat-autocomplete>
         </mat-form-field>
-
-        <!-- <mat-form-field appearance="outline" [style.width.px]="200">
-            <mat-label>feature</mat-label>
-            <mat-select formControlName="searchFeatureName" (selectionChange)="enable($event)">
-                <mat-option value="0">select</mat-option>
-                <mat-option *ngFor="let item of CustomFeatures" [value]="item.CustomFeatureId">
-                    {{item.CustomFeatureName}}
-                </mat-option>
-            </mat-select>
-        </mat-form-field> -->
+       
         <button [disabled]="loading" style="margin-right:15px" matTooltip="search" mat-raised-button color="accent"
             (click)="GetCustomerFeatures()">
             <mat-icon>search</mat-icon>
