--- a/src/app/modules/student/searchstudent/searchstudent.component.html
+++ b/src/app/modules/student/searchstudent/searchstudent.component.html
@@ -35,6 +35,7 @@
                 <mat-form-field appearance="outline" style="width: 200px;">
                     <mat-label>Class</mat-label>
                     <mat-select formControlName="searchClassId" (selectionChange)="ClearData()">
+                        <mat-option value="0">--select--</mat-option>
                         <mat-option *ngFor="let item of Classes" [value]="item.ClassId">
                             {{item.ClassName}}
                         </mat-option>
@@ -49,7 +50,24 @@
                         </mat-option>
                     </mat-select>
                 </mat-form-field>
-                
+                <!-- <mat-form-field appearance="outline" [style.width.px]="200">
+                    <mat-label>Father</mat-label>
+                    <input type="text" matInput formControlName="FatherName" [matAutocomplete]="autoF">
+                    <mat-autocomplete #autoF="matAutocomplete" [displayWith]="displayFnF">
+                        <mat-option *ngFor="let option of filteredFathers | async" [value]="option">
+                            {{option.FatherName}}
+                        </mat-option>
+                    </mat-autocomplete>
+                </mat-form-field>
+                <mat-form-field appearance="outline" [style.width.px]="200">
+                    <mat-label>Mother</mat-label>
+                    <input type="text" matInput formControlName="MotherName" [matAutocomplete]="autoM">
+                    <mat-autocomplete #autoM="matAutocomplete" [displayWith]="displayFnM">
+                        <mat-option *ngFor="let option of filteredMothers | async" [value]="option">
+                            {{option.MotherName}}
+                        </mat-option>
+                    </mat-autocomplete>
+                </mat-form-field> -->
                 <mat-form-field appearance="outline" style="width: 200px;">
                     <mat-label>search</mat-label>
                     <mat-select formControlName="searchRemarkId">
