query error fixed

--- a/src/app/modules/auth/login/login.component.scss
+++ b/src/app/modules/auth/login/login.component.scss
@@ -7,6 +7,10 @@
     align-items: flex-start;
     //margin-top: 50px;
 }
+mat-icon{
+    margin-right: 15px;
+}
+
 .container1 {
     position: relative;
     text-align: center;
