--- a/src/app/modules/student/studentfeepayment/addstudentfeepayment/addstudentfeepayment.component.html
+++ b/src/app/modules/student/studentfeepayment/addstudentfeepayment/addstudentfeepayment.component.html
@@ -173,7 +173,7 @@
                             </mat-footer-row>
                         </mat-table>
                         
-                        <div fxLayout="row" fxLayoutAlign="space-between center" style="padding: 25px;">
+                        <div style="display:flex;justify-content: space-evenly;width:100%; padding: 25px;">
                             <span>
                                 <mat-form-field style="width: 150px;margin-right: 15px;">
                                     <mat-label>Offline receipt no.</mat-label>
@@ -191,10 +191,10 @@
                             </span>
                             <span>
                                 <form [formGroup]="paymentform">
-                                    <span *ngIf="PaymentName =='adjusted to account'">
-                                        <mat-form-field appearance="outline" [style.width.px]="350"
+                                    <span *ngIf="PaymentName =='ats'">
+                                        <mat-form-field appearance="legacy" [style.width.px]="250"
                                             style="margin-right: 15px;">
-                                            <mat-label>employee</mat-label>
+                                            <mat-label>Employee</mat-label>
                                             <input type="text" matInput formControlName="GeneralLedgerAccountId"
                                                 [matAutocomplete]="auto">
                                             <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
