--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -11,11 +11,11 @@
          </div> -->
             <div>
                 <mat-icon>check_circle_outline</mat-icon>
-                <b>Enquiries and Admissions Management</b><br>
+                <b>Enquiries and Admission Management</b><br>
                 With the help of the Education Management System, the most commonly asked questions and enquiries
-                regarding
-                admissions, rules and policies can be easily answered. This can free up a lot of time and resources
+                regarding admissions, rules and policies can be easily answered. This can free up a lot of time and resources
                 which can be allocated elsewhere.
+                <p>Transition of school management from traditional manual to digital can be made easy by using <b>Admission Management</b>.</p>
             </div>
         </div>
         <div  style="margin-bottom: 30px;">
@@ -123,7 +123,7 @@
                         <a [routerLink]="['/auth/forgot']">Forgot password</a>
                     </div>
                     <div style="margin: 15px 15px 15px 0px;">
-                        New user? <a [routerLink]="['/auth/signup']">Sign up</a>
+                        New school owner? <a [routerLink]="['/auth/signup']">Sign up</a>
                     </div>
                     <div *ngIf="f.username.invalid && (f.username.dirty || f.username.touched)"
                         class="alert alert-danger">
